fixed todo item alignment issue

--- a/src/styles/sass/ToDo.scss
+++ b/src/styles/sass/ToDo.scss
@@ -36,7 +36,8 @@
         }
     }
     ul {
-        padding-left: 0;
+        justify-self: stretch;
+        padding-left: 20px;
         .itemContainer {
             li {
                 list-style-type: none;
@@ -86,7 +87,7 @@
                 display: none;
                 margin-bottom: 20px;
                 textarea {
-                    width: 100%;
+                    width: 80%;
                     padding: 5px;
                     height: 50px;
                     background-color: rgba($color: #000000, $alpha: 0);
